.gitconfig: Alias to change to previous branch
- Do 'git pv' =]

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -44,6 +44,7 @@
     # checkout
     co = checkout
     nb = checkout -b
+    pv = checkout @{-1} # Changes to previous branch
 
     # cherry-pick
     cp = cherry-pick -x
