Changing some git alias and remappings in vimrc
- git rb: git rebase
- git rbu: Script to rebase upon upstream
- git pr: git pull --rebase
- vim: Rolling back splitted window navigation to use 'Control' instead of
  'Alt'
- vim: Using 'Shift-PageUp' and 'Shift-PageDown' to move tabs and native
  'Control-PageUp' and 'Control-PageDown' to switch between them

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -65,15 +65,18 @@
 
     # pull
     pl = pull
+    pr = pull --rebase
 
     # push
     ps = push
     po = push origin
 
     # rebase
-    rb = "!f(){ git rebase -i $(git rev-parse $(git rev-parse --abbrev-ref --symbolic-full-name @{u};)); };f"
+    rb = rebase
     rc = rebase --continue
     rs = rebase --skip
+    # rebase upstream
+    rbu = "!f(){ git rebase -i $(git rev-parse $(git rev-parse --abbrev-ref --symbolic-full-name @{u};)); };f"
 
     # remote
     r = remote -v
