Emacs: First steps :)
- Elpa;
- Evil mode with evil-leader plugin \m/;
- Ido configuration;
- Smex;
- Relative number(like vim);
- Projectile;
- Company mode;
- Anaconda mode for Python.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ vim/.vim/bundle/*/
 vim/.vim/spell/
 # Vim's explorer
 .netrwhist
+# Emacs
+emacs/elpa/
+emacs/projectile-bookmarks.eld
+emacs/auto-save-list/
