--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -38,6 +38,9 @@ inoremap ,r :action GotoAction<cr>
 " toggle buffers
 nnoremap ,g :action VimFilePrevious<cr>
 inoremap ,g :action VimFilePrevious<cr>
+" find in files
+nnoremap ,a :action FindInPath<cr>
+inoremap ,a :action FindInPath<cr>
 
 " Override point navigation
 nnoremap <c-o> :action Back<cr>
