--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -31,6 +31,7 @@
     amend = commit --amend -C HEAD
     amendoa = commit -a --amend -C HEAD
 
+    s = status
     st = status
     br = branch
     co = checkout
