--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -50,11 +50,9 @@ set -g visual-content on
 ###########################
 
 # tmux prefix
-#unbind C-b
-#set -g prefix C-a
-
-# Ensure that we can send Ctrl-A to other apps
-#bind C-a send-prefix
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
 
 # paste
 unbind C-p
