--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -41,6 +41,9 @@ inoremap ,g :action VimFilePrevious<cr>
 " find in files
 nnoremap ,a :action FindInPath<cr>
 inoremap ,a :action FindInPath<cr>
+" vertical split
+nnoremap ,v :vsplit<cr>
+inoremap ,v :vsplit<cr>
 
 " Override point navigation
 nnoremap <c-o> :action Back<cr>
