--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -44,12 +44,19 @@ inoremap ,a :action FindInPath<cr>
 " vertical split
 nnoremap ,v :vsplit<cr>
 inoremap ,v :vsplit<cr>
+" Close other splits
+nnoremap ,w :action VimWindowOnly<cr>
+inoremap ,w <esc>:action VimWindowOnly<cr>
 
-" Override point navigation
+" override point navigation
 nnoremap <c-o> :action Back<cr>
 nnoremap <c-i> :action Forward<cr>
 
-" Emacs bindings
+" tab navigation
+nnoremap <c-h> :action VimMotionPreviousTab<CR>
+nnoremap <c-l> :action VimMotionNextTab<CR>
+
+" emacs bindings
 inoremap <c-a> <esc>I
 nnoremap <c-a> ^
 inoremap <c-e> <esc>A
