--- a/x11/autostart/xmodmap.desktop
+++ b/x11/autostart/xmodmap.desktop
@@ -1,4 +1,4 @@
 [Desktop Entry]
-Exec=sh -c "xmodmap \$HOME/.Xmodmap &"
+Exec=sh -c "xmodmap \$HOME/.Xmodmap"
 Name[en_US]=Xmodmap
 Type=Application
