--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -37,8 +37,8 @@ nnoremap 0 ^
 " Leader bindings
 let mapleader = ","
 " save and goes to normal mode
-nnoremap <leader>s :wa<cr> 
-inoremap <leader>s <esc>:wa<cr> 
+nnoremap <leader>s :action Macro.go_imports__on_save<cr>
+inoremap <leader>s <esc>:action Macro.go_imports__on_save<cr>
 " end of line
 nnoremap <leader>e $
 inoremap <leader>e <esc>A
