--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -47,6 +47,7 @@
 	po = push origin
 	pof = push -f origin
 	apof = !git amendoa && git pof
+	ruub = !git remote update upstream && git rebase
 
 	rb = rebase
 
