--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -13,14 +13,10 @@ set incsearch
 set surround
 
 " find files
-nnoremap <space>pf :action GotoFile<cr>
-" toggle breakpoint
-nnoremap <space>b :action ToggleLineBreakpoint<cr>
+nnoremap <space>o :action GotoFile<cr>
 " error navigation
 noremap <space>en :action GotoNextError<cr>:action ShowErrorDescription<cr>
 noremap <space>ep :action GotoPreviousError<cr>:action ShowErrorDescription<cr>
-" reopen closed tab
-nnoremap <space>t :action ReopenClosedTab<cr>
 " find
 nnoremap <space>s /
 nnoremap <space>r ?
@@ -38,38 +34,29 @@ let mapleader = ","
 nnoremap <leader>s :w<cr>:action Tool_External Tools_goimports<cr>
 inoremap <leader>s <esc>:w<cr>:action Tool_External Tools_goimports<cr>
 " end of line
-nnoremap <leader>e $
 inoremap <leader>e <esc>A
 " close
 nnoremap <leader>q :action CloseContent<cr>
 inoremap <leader>q <esc>:action CloseContent<cr>
-" go to symbol
-nnoremap <leader>d :action GotoSymbol<cr>
-" toggle buffers
-nnoremap <leader>g :action VimFilePrevious<cr>
-inoremap <leader>g :action VimFilePrevious<cr>
-" find in files
-nnoremap <leader>a :action FindInPath<cr>
-inoremap <leader>a :action FindInPath<cr>
-" vertical split
-nnoremap <leader>v :vsplit<cr>
-inoremap <leader>v :vsplit<cr>
 " Close other splits
 nnoremap <leader>w :action VimWindowOnly<cr>
 inoremap <leader>w <esc>:action VimWindowOnly<cr>
+" go to symbol
+nnoremap <leader>d :action FileStructurePopup<cr>
+" toggle buffers
+nnoremap <leader>g :action VimFilePrevious<cr>
+" find in files
+nnoremap <leader>a :action FindInPath<cr>
+" vertical split
+nnoremap <leader>v :vsplit<cr>
 " Opened buffers
-nnoremap <leader>b :action Switcher<cr>
-inoremap <leader>b <esc>:action Switcher<cr>
+nnoremap <leader>b :action SearchEverywhere<cr>
 " refactoring
 nnoremap <leader>r :action RenameElement<cr>
 
 " override point navigation
 nnoremap <c-o> :action Back<cr>
 nnoremap <c-i> :action Forward<cr>
-
-" tab navigation
-nnoremap <c-h> :action VimMotionPreviousTab<CR>
-nnoremap <c-l> :action VimMotionNextTab<CR>
 
 " emacs bindings
 inoremap <c-a> <esc>I
