Revert "terminator: disable F12 shortcut"
This reverts commit e4b8c7874fc3f116bf45006c1c3847a07372fae2.

--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -8,6 +8,7 @@
   go_left = <Alt>h
   go_right = <Alt>l
   go_up = <Alt>k
+  hide_window = F12
   layout_launcher = <Shift><Alt>l
   split_horiz = <Alt>o
   split_vert = <Alt>i
