--- a/.gitconfig
+++ b/.gitconfig
@@ -45,7 +45,7 @@
 
 	pr = pull --rebase
 	po = push origin
-	pof = push -f origin
+	pof = !git pr && git push -f origin
 	apof = !git amendoa && git pof
 	ruub = !git remote update upstream && git rebase
 
