--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".emacs.d/vendor/fzf"]
+[submodule ".emacs.d/vendor/fzf.el"]
 	path = .emacs.d/vendor/fzf.el
-	url = https://github.com/romanoaugusto88/fzf.el.git
+	url = git@github.com:romanoaugusto88/fzf.el.git
