VSCode: settings without vim mode

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,183 +1,6 @@
 {
-    "editor.minimap.enabled": false,
-    "editor.renderIndentGuides": false,
-    "editor.renderLineHighlight": "gutter",
-    "editor.rulers": [
-        100
-    ],
-    "editor.detectIndentation": true,
-    "extensions.ignoreRecommendations": true,
-    "files.insertFinalNewline": true,
-    "files.trimTrailingWhitespace": true,
-    "vim.hlsearch": true,
-    "vim.visualstar": true,
-    "vim.statusBarColorControl": true,
-    "vim.useSystemClipboard": true,
-    "vim.ignorecase": true,
-    "vim.smartcase": true,
-    "vim.useCtrlKeys": true,
-    "vim.leader": ",",
-    "vim.insertModeKeyBindings": [
-        {
-            "before": ["f","d"],
-            "after": ["<Esc>"]
-        },
-        {
-            "before": [",","s"],
-            "after": ["<Esc>"],
-            "commands": [
-                {
-                    "command": "workbench.action.files.save",
-                }
-            ]
-        },
-        {
-            "before": ["C-f"],
-            "after": ["C-o"],
-        },
-    ],
-    "vim.normalModeKeyBindingsNonRecursive": [
-        {
-            "before": ["v"],
-            "after": ["v"]
-        }
-    ],
-    "vim.visualModeKeyBindingsNonRecursive": [
-        {
-            "before": ["v"],
-            "after": ["a", "f"]
-        }
-    ],
-    "vim.visualModeKeyBindings": [
-       {
-            "before": ["leader","c"],
-            "commands": [
-                {
-                    "command": "editor.action.commentLine",
-                }
-            ]
-       },
-       {
-            "before": ["leader","a"],
-            "commands": [
-                {
-                    "command": "workbench.action.findInFiles",
-                }
-            ]
-       },
-       {
-           "before": ["v"],
-           "commands": [
-               {
-                   "command": "editor.action.smartSelect.grow"
-               }
-           ]
-       },
-       {
-           "before": ["V"],
-           "commands": [
-               {
-                   "command": "editor.action.smartSelect.shrink"
-               }
-           ]
-       },
-       {
-           "before": ["C-n"],
-           "commands": [
-               {
-                   "command": "editor.action.addSelectionToNextFindMatch"
-               }
-           ]
-       },
-       {
-           "before": ["C-j"],
-           "commands": [
-               {
-                   "command": "editor.action.moveSelectionToNextFindMatch"
-               }
-           ]
-       }
-    ],
-    "vim.normalModeKeyBindings": [
-       {
-            "before": ["leader","s"],
-            "commands": [
-                {
-                    "command": "workbench.action.files.save",
-                }
-            ]
-       },
-       {
-            "before": ["leader","b"],
-            "commands": [
-                {
-                    "command": "workbench.action.quickOpen",
-                }
-            ]
-       },
-       {
-            "before": ["leader","a"],
-            "commands": [
-                {
-                    "command": "workbench.action.findInFiles",
-                }
-            ]
-       },
-       {
-            "before": ["leader","q"],
-            "commands": [
-                {
-                    "command": "workbench.action.closeActiveEditor",
-                }
-            ]
-       },
-       {
-            "before": ["leader","c"],
-            "commands": [
-                {
-                    "command": "editor.action.commentLine",
-                }
-            ]
-       },
-       {
-            "before": ["leader", "v"],
-            "commands": [":vsplit"]
-       },
-       {
-            "before": ["leader", "w"],
-            "commands": [":only!"]
-       },
-       {
-           "before": ["C-l"],
-           "after": ["C-w", "l"]
-       },
-       {
-           "before": ["C-h"],
-           "after": ["C-w", "h"]
-       },
-    ],
-    "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/CVS": true,
-        "**/.DS_Store": true,
-        "**/*.pyc": true
-    },
-    "go.formatTool": "goimports",
-    "go.autocompleteUnimportedPackages": true,
+    "workbench.colorTheme": "Nova",
     "explorer.confirmDelete": false,
-    "go.coverOnSave": true,
-    "go.coverOnSingleTest": true,
-    "go.useCodeSnippetsOnFunctionSuggest": true,
-    "breadcrumbs.enabled": true,
-    "workbench.sideBar.location": "right",
-    "workbench.colorTheme": "Default Light+",
-    "workbench.editor.showTabs": false,
-    "workbench.colorCustomizations": {
-        "statusBar.background": "#005f5f",
-        "statusBar.noFolderBackground": "#005f5f",
-        "statusBar.debuggingBackground": "#005f5f"
-    },
-    "git.enabled": false
+    "explorer.confirmDragAndDrop": false,
+    "go.lintTool": "golangci-lint",
 }
