vscode: disable telemetry and minimap

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -8,4 +8,7 @@
         "vendor/**": true
     },
     "extensions.ignoreRecommendations": false,
+    "telemetry.enableCrashReporter": false,
+    "telemetry.enableTelemetry": false,
+    "editor.minimap.enabled": false,
 }
