--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -2,13 +2,18 @@
     "workbench.colorTheme": "Nova",
     "explorer.confirmDelete": false,
     "explorer.confirmDragAndDrop": false,
-    "go.lintTool": "golangci-lint",
     "diffEditor.renderSideBySide": true,
     "files.exclude": {
         "vendor/**": true
     },
     "extensions.ignoreRecommendations": false,
-    "telemetry.enableCrashReporter": false,
     "telemetry.enableTelemetry": false,
+    "gitlens.advanced.telemetry.enabled": false,
+    "telemetry.enableCrashReporter": false,
     "editor.minimap.enabled": false,
+    "terminal.integrated.cwd": "${fileDirname}",
+    "go.lintTool": "golangci-lint",
+    "[go]": {
+        "editor.rulers": [120]
+    }
 }
