alacritty: better fonts and colours

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,10 +1,14 @@
-colors:
-  primary:
-    background: '#ffffff'
-    foreground: '#657b83'
-
 font:
   normal:
-    family: Cousine
+    family: Roboto Mono
     style: Regular
-  size: 10
+
+  offset:
+    x: 0
+    y: 2
+
+  glyph_offset:
+    x: 0
+    y: 0
+
+  size: 11
