--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -13,10 +13,6 @@
     "editor.minimap.enabled": false,
     "editor.cursorBlinking": "solid",
     "terminal.integrated.cwd": "${fileDirname}",
-    "go.lintTool": "golangci-lint",
-    "[go]": {
-        "editor.rulers": [120]
-    },
     "vim.hlsearch": false,
     "vim.visualstar": true,
     "vim.statusBarColorControl": true,
@@ -173,4 +169,35 @@
         "statusBar.noFolderBackground": "#005f5f",
         "statusBar.debuggingBackground": "#005f5f"
     },
+    "go.formatTool": "goimports",
+    "go.lintTool": "golangci-lint",
+    "go.useLanguageServer": true,
+    "go.languageServerFlags": [
+        "-rpc.trace", // for more detailed debug logging
+        "serve",
+        "--debug=localhost:6060", // to investigate memory usage, see profiles
+    ],
+    "[go]": {
+        "editor.rulers": [120],
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": true,
+        },
+        // Optional: Disable snippets, as they conflict with completion ranking.
+        "editor.snippetSuggestions": "none",
+    },
+    "[go.mod]": {
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": true,
+        },
+    },
+    "gopls": {
+        // Add parameter placeholders when completing a function.
+        "usePlaceholders": true,
+
+        // If true, enable additional analyses with staticcheck.
+        // Warning: This will significantly increase memory usage.
+        "staticcheck": false,
+    }
 }
