VSCode: change default color theme

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,5 +1,5 @@
 {
-    "workbench.colorTheme": "Spacemacs - dark",
+    "workbench.colorTheme": "Spacemacs - light",
     "explorer.confirmDelete": false,
     "explorer.confirmDragAndDrop": false,
     "diffEditor.renderSideBySide": true,
